@@ -669,16 +669,6 @@ g_file_get_child_for_display_name (GFile      *file,
   return (* iface->get_child_for_display_name) (file, display_name, error);
 }
 
-/* Temporary keep this symbol for one release */
-gboolean g_file_contains_file (GFile *parent, GFile *descendant);
-gboolean
-g_file_contains_file (GFile *parent,
-		      GFile *descendant)
-{
-  /* This function is not in the header and will not be referenced by newly built code */
-  return g_file_has_prefix (descendant, parent);
-}
-
 /**
  * g_file_has_prefix:
  * @file: input #GFile.
